[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hearth"
version = "0.1.0"
description = "Kubernetes operator for GPU cluster lifecycle management and Kueue quota automation"
requires-python = ">=3.11"
dependencies = [
    "kopf>=1.37",
    "kubernetes>=31.0",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
